# FF-Winners-And-Losers

./: .gitignore  image_gen.py  pyproject.toml  winners_and_losers.py
src/: data_gen.py  image_gen.py  prompt_gen.py  winners_and_losers.py
